k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: catalog-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: catalog-api

  template:
    metadata:
      labels:
        app: catalog-api

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: ncatalog-api
          image: ghcr.io/mibber123/catalog:latest
