k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-servers

spec:
  replicas: 3

  selector:
    matchLabels:
      service: nginx-server

  template:
    metadata:
      labels:
        service: nginx-server

    spec:
      containers:
        - name: nginx-container
          image: nginxdemos/hello
